Update reference documents of api params in notebook

--- a/experiments/openai-chat.ipynb
+++ b/experiments/openai-chat.ipynb
@@ -230,6 +230,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## API parameters\n",
+    "[OpenAI - Create chat completion](https://platform.openai.com/docs/api-reference/chat/create)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Result \n",
     "\n",
     "Due to the low temperature, the response is stable and the output follows the specified format."
