--- a/experiments/langchain.ipynb
+++ b/experiments/langchain.ipynb
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
     "\n",
     "\n",
     "# LLM\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
+    "llm = ChatOpenAI(model_name=\"gpt-4\", temperature=0)\n",
     "\n",
     "# Prompt \n",
     "message_template = \"\"\"你是一名專業投資理財顧問，\n",
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,27 +642,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. 建議：根據財報內容，建議購買台積電股票。\n",
+      "1. 建議：Citi對台積電的看法樂觀，預期其2024年表現將因AI和HPC的穩定產品線而改善，並重申買入評級，目標價格為NT$620。\n",
       "\n",
-      "2. 財報指標表格：\n",
-      "年份  |  淨利潤  |  每股盈利  |  盈利成長率  |  市盈率  |  市價淨值比  |  股東權益報酬率  |  預期股息率\n",
-      "2021A  |  596,540M  |  23.00  |  15.2%  |  33.3  |  6.4  |  29.7%  |  2.1%\n",
-      "2022A  |  1,016,530M  |  39.20  |  70.4%  |  13.6  |  4.7  |  39.6%  |  2.1%\n",
-      "2023E  |  872,096M  |  33.63  |  -14.2%  |  15.9  |  3.9  |  26.9%  |  2.2%\n",
-      "2024E  |  1,019,383M  |  39.31  |  16.9%  |  13.6  |  3.3  |  26.3%  |  2.3%\n",
-      "2025E  |  1,276,397M  |  49.22  |  25.2%  |  10.9  |  2.7  |  27.2%  |  2.4%\n"
+      "2. 財報指標視覺化表格：\n",
+      "\n",
+      "| 年份 | 淨利潤 (NT$M) | 每股盈餘 (NT$) | EPS成長 (%) | P/E | P/B | ROE (%) | 殖利率 (%) |\n",
+      "|------|--------------|--------------|-------------|-----|-----|---------|------------|\n",
+      "| 2021A | 596,540 | 23.00 | 15.2 | 23.3 | 6.4 | 29.7 | 2.1 |\n",
+      "| 2022A | 1,016,530 | 39.20 | 70.4 | 13.6 | 4.7 | 39.6 | 2.1 |\n",
+      "| 2023E | 872,096 | 33.63 | -14.2 | 15.9 | 3.9 | 26.9 | 2.2 |\n",
+      "| 2024E | 1,019,383 | 39.31 | 16.9 | 13.6 | 3.3 | 26.3 | 2.3 |\n",
+      "| 2025E | 1,276,397 | 49.22 | 25.2 | 10.9 | 2.7 | 27.2 | 2.4 |\n"
      ]
     }
    ],
    "source": [
     "print(result[\"result\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| 年份 | 淨利潤 (NT$M) | 每股盈餘 (NT$) | EPS成長 (%) | P/E | P/B | ROE (%) | 殖利率 (%) |\n",
+    "|------|--------------|--------------|-------------|-----|-----|---------|------------|\n",
+    "| 2021A | 596,540 | 23.00 | 15.2 | 23.3 | 6.4 | 29.7 | 2.1 |\n",
+    "| 2022A | 1,016,530 | 39.20 | 70.4 | 13.6 | 4.7 | 39.6 | 2.1 |\n",
+    "| 2023E | 872,096 | 33.63 | -14.2 | 15.9 | 3.9 | 26.9 | 2.2 |\n",
+    "| 2024E | 1,019,383 | 39.31 | 16.9 | 13.6 | 3.3 | 26.3 | 2.3 |\n",
+    "| 2025E | 1,276,397 | 49.22 | 25.2 | 10.9 | 2.7 | 27.2 | 2.4 |"
    ]
   },
   {
