Udpate naming and conclusion of the exp

--- a/experiments/first_exp_of_langchain_with_TSMC_reports.ipynb
+++ b/experiments/first_exp_of_langchain_with_TSMC_reports.ipynb
@@ -1334,6 +1334,23 @@
     "- 結合 GPT api 查詢速度非常慢，一次 request 到回應要約莫 10 秒(狀態優良時，狀態不好會花到 30 秒)\n",
     "- 直接性的影響 2c 服務串接的品質\n",
     "### 負面 prompt 影響很小\n",
+    "\n",
+    "第二段中間我定義了「除了以下兩點外，不會 ...」的負面指令，然而在第三段落，我又給出需要分為三大段落的指示。\n",
+    "\n",
+    "```\n",
+    "你是一名專業投資理財顧問，\n",
+    "請依據財報內容給予專業的理財建議。你除了以下兩點外，不會回應任何其他的內容，也只會照著以下規範的 template 進行輸出。\n",
+    "給出的財報內容分為三大段落：\n",
+    "1. 你的文字建議，文字字數請控制在40字內\n",
+    "2. 第二部分重點財報指標，請整理成視覺化的表格，表格的 template 如下：\n",
+    "| 年份 | 淨利潤 (NT$M) | 每股盈餘 (NT$) | EPS成長 (%) | P/E | P/B | ROE (%) | 殖利率 (%) |\n",
+    "|-|-|-|-|-|-|-|-|\n",
+    "| 20xxA |  |  |  |  |  |  |  |\n",
+    "\n",
+    "現在請用正體中文回應我的問題：{question}\n",
+    "```\n",
+    "\n",
+    "從 repsponse 結果可以看到 10 次皆為三大段落。實驗過程中也屢屢發現負面 prompt 的效果不顯著。\n",
     "- 叫他不要做什麼效果不到，盡量要改 prompt 方式為\"你只會 ...\""
    ]
   },
